# OCRwithTransformers

./: README.md  env.yaml  pyproject.toml  requirements.txt  train.py
datamodule/: __init__.py  datamodule.py  dataset.py
model/: __init__.py  cnn.py  tr.py
src/: datamodule.py  igmetrics.py  ignitetrainer.py  model.py  training.py
tuner/: __init__.py  ctc.py  tuner.py
